--- a/BaseAspNetCoreApplication/BaseAspNetCoreApplication.csproj
+++ b/BaseAspNetCoreApplication/BaseAspNetCoreApplication.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="3.0.5" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="3.0.5" />
   </ItemGroup>
 
 </Project>
